modifying sturcutre
