# .hh/python-flask-server-generated/swagger_server/models/__init__.py
@@ -1,10 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-from __future__ import absolute_import
-# import models into model package
-from swagger_server.models.like import Like
-from swagger_server.models.new_like import NewLike
-from swagger_server.models.new_user import NewUser
-from swagger_server.models.user import User
-from swagger_server.models.user_location import UserLocation
