# swagger_server/models/new_like.py
@@ -1,96 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class NewLike(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, user_id: int=None, liked_user_id: int=None):  # noqa: E501
-        """NewLike - a model defined in Swagger
-
-        :param user_id: The user_id of this NewLike.  # noqa: E501
-        :type user_id: int
-        :param liked_user_id: The liked_user_id of this NewLike.  # noqa: E501
-        :type liked_user_id: int
-        """
-        self.swagger_types = {
-            'user_id': int,
-            'liked_user_id': int
-        }
-
-        self.attribute_map = {
-            'user_id': 'user_id',
-            'liked_user_id': 'liked_user_id'
-        }
-        self._user_id = user_id
-        self._liked_user_id = liked_user_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'NewLike':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The NewLike of this NewLike.  # noqa: E501
-        :rtype: NewLike
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def user_id(self) -> int:
-        """Gets the user_id of this NewLike.
-
-        The ID of the user who is performing the like action  # noqa: E501
-
-        :return: The user_id of this NewLike.
-        :rtype: int
-        """
-        return self._user_id
-
-    @user_id.setter
-    def user_id(self, user_id: int):
-        """Sets the user_id of this NewLike.
-
-        The ID of the user who is performing the like action  # noqa: E501
-
-        :param user_id: The user_id of this NewLike.
-        :type user_id: int
-        """
-        if user_id is None:
-            raise ValueError("Invalid value for `user_id`, must not be `None`")  # noqa: E501
-
-        self._user_id = user_id
-
-    @property
-    def liked_user_id(self) -> int:
-        """Gets the liked_user_id of this NewLike.
-
-        The ID of the user being liked  # noqa: E501
-
-        :return: The liked_user_id of this NewLike.
-        :rtype: int
-        """
-        return self._liked_user_id
-
-    @liked_user_id.setter
-    def liked_user_id(self, liked_user_id: int):
-        """Sets the liked_user_id of this NewLike.
-
-        The ID of the user being liked  # noqa: E501
-
-        :param liked_user_id: The liked_user_id of this NewLike.
-        :type liked_user_id: int
-        """
-        if liked_user_id is None:
-            raise ValueError("Invalid value for `liked_user_id`, must not be `None`")  # noqa: E501
-
-        self._liked_user_id = liked_user_id
